Introduced ChannelInfo which is used to represent the information about what audio PatternSystemManager should render. This includes not only the channel index, but also a Voicing value which allows PatternElements generated by PatternElementFactory to be voiced with different PatternNotes depending on the context. This new capability is used to provide a separate CellList to MixdownManager::cells for the wet and dry signals. ParameterizedEnvelope implementations are updated to use generally longer envelopes for the wet channel audio than the dry channel audio. Removed deprecated PatternAudio class.